--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Sat Feb 08 20:49:06 UTC 2025
-allow-flight=false
+#Sat Feb 15 02:21:06 UTC 2025
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=easy
+difficulty=hard
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
@@ -50,7 +50,7 @@ simulation-distance=10
 spawn-animals=true
 spawn-monsters=true
 spawn-npcs=true
-spawn-protection=16
+spawn-protection=0
 sync-chunk-writes=true
 text-filtering-config=
 use-native-transport=true
